Mon Mar 12 00:10:18 CET 2012   Christopher Martin  <belles@internode.on.net>
                               John Tytgat  <John.Tytgat@aaug.net>

	Convert source DRenderer from BASIC to AsAsm/ObjAsm.
	* DigiRendV, stdlib, DRender.o,ffd: Remove.
	* makelogtable.c, DRenderer.s, Makefile: Add.

Sun Mar 11 23:54:31 CET 2012   Christopher Martin  <belles@internode.on.net>

	* DigiRendV, stdlib: Import of v0.54.
	Substantial bugfixes, work-arounds and optimisations for newer systems
	based on ARMv5 and later architectures. The primary fault in 0.52
	addressed by this version could cause some systems to play audio files
	at the wrong speed.
	* DRenderer,ffa: Removed.

Sun Mar 11 23:20:36 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* DigiRendV,ffb: Detokenized as DigiRendV.
	* stdlib,ffb: Detokenized as stdlib.

Sun Mar 11 16:08:40 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* DRender.s: Fix syntax so it can be assembled with AsAsm.
	* ChangeLog: Add.