@@ -1,0 +1,2 @@
+wimpslot -min 8192k -max 8192k
+make -C <Obey$Dir> RONATIVE=YES %*0
